added base navigation

--- a/feature/auth/src/main/res/values/strings.xml
+++ b/feature/auth/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <string name="text">Text</string>
+    <string name="feature_auth_title_auth">Auth</string>
 
 </resources>
