--- a/feature/auth/src/main/res/values/strings.xml
+++ b/feature/auth/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
 
 <resources>
     <string name="feature_auth_title_auth">Auth</string>
-
+    <string name="feature_auth_title_sign_in">Sign In</string>
+    <string name="feature_auth_title_sign_up">Sign Up</string>
 </resources>
